--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "watch": "jest --watch",
     "verify": "cypress verify"
   },
-  "": {
-    "@anttiviljami/serverless-stack-output": "0.2.1",
+  "dependencies": {
+    "@anttiviljami/serverless-stack-output": "0.3.1",
     "@iopipe/iopipe": "^1.14.0",
     "aws-sdk": "2.466.0",
     "axios": "0.19.0",
     "middy": "0.27.0",
     "serverless-webpack": "5.3.0",
-    "webpack": "3.32.2"
+    "webpack": "4.32.2"
   },
   "devDependencies": {
     "aws-sdk-mock": "4.4.0",
